update: add chat input

--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,9 @@ body {
     transition-duration: 300ms;
     box-shadow: 0 0 0px 7px #abc4ff;
 }
+
+.input-focus:focus {
+    transition: all;
+    transition-duration: 300ms;
+    box-shadow: 0 0 0px 7px #abc4ff;
+}
